--- a/API-Web-Data-Viz/public/login.html
+++ b/API-Web-Data-Viz/public/login.html
@@ -6,56 +6,91 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TransControl | Login</title>
   <script src="./js/sessao.js"></script>
-  <link rel="stylesheet" href="../css/login.css">
+  <link rel="stylesheet" href="./css/cadastro.css">
   <link rel="shortcut icon" href="../img/LogoSEMescrita.png" type="image/x-icon">
 </head>
 
 <body>
   <header>
-    <a href="index.html"><img src="../css/img/LogoSEMescrita.png" alt="Logo da Empresa" ></a>
+    <a href="index.html"><img class="icone1" src="./css/img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
     <div class="itemsHeader">
       <h4><a href="index.html">Início</a></h4>
       <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
       <h4><a href="./Calculadora Financeiraa/Calculadora/calculadora.html">Simulador Financeiro</a></h4>
-      <h4>||</h4>
-      <buttonn class="botao" onclick="opcaoHeader()"></buttonn>
-    </div>
+      <h4>||</h4>	
+    
+	<div class="menu-1">
+		<div> <img class="hamburguer" src="./css/img/hamburguer.png" alt=""></div>
+	</div>
+
+	<nav class="menu">
+		<ul> <br> <br>
+			<li><a href="login.html">Login</a></li> <br>
+			<li><a href="TelaDeCadastro.html">Cadastro</a></li> <br>
+		</ul>
+	</nav>
+	</div>
+</div>
   </header>
-  <div class="background">
-    <div class="underheader">
-      <div id="options" class="options">
-        <a href="login.html">Login</a>
-        <a href="TelaDeCadastro.html">Cadastro</a>
-      </div>
-    </div>
-    <div class="container">
+
+<div class="container">
+	<div class="form">
+      <h2>Login</h2>
+		<form>
+        <input id="ipt_email" type="text" placeholder="E-mail" required>
+        <input id="ipt_senha" type="password" placeholder="Senha" required>
+        <button id="botaoEnviar" onclick="entrar()">Entrar</button> <br><br>
+        <a href="TelaDeCadastro.html" class="link">Cadastre-se</a>
+		</form>
+	</div>
+
+	<div class="image">
+		<img src="./css/img/icone.png" alt="">
+	</div>
+
       <div class="alerta_erro">
         <div class="card_erro" id="cardErro">
           <span id="mensagem_erro"></span>
         </div>
-      </div>
-      <div class="login">
-        <h2>Login</h2>
-        <input id="ipt_email" type="text" placeholder="E-mail" required>
-        <input id="ipt_senha" type="password" placeholder="Senha" required>
-        <button id="botaoEnviar" onclick="entrar()">Entrar</button>
-        <a href="TelaDeCadastro.html" class="link">Ainda não tem login?</a>
-        <div id="div_aguardar" class="loading-div">
-          <img src="./assets/circle-loading.gif" id="loading-gif">
-        </div>
-      </div>
-
-      <div id="div_erros_login"></div>
+      
     </div>
   </div>
-  <footer>
-    <div class="footer">
-      <div class="container">
-        <p>Feito por TransControl - SPTECH - 1CCO &copy;</p>
-      </div>
-    </div>
-  </footer>
+  
+  	<div id="div_aguardar" class="loading-div">
+          <!-- <img src="./assets/circle-loading.gif" id="loading-gif"> -->
+    </div><div id="div_erros_login"></div>
+	</body>
+	<footer>
+		<div class="footer">
+		  <div class="container2">
+			<p>Feito por TransControl - SPTECH - 1CCO &copy;</p>
+		  </div>
+		</div>
+	  </footer>
+
+
   <script>
+
+		// Seleciona o botão do menu
+		const menuToggle = document.querySelector('.menu-1');
+	// Seleciona o menu de navegação
+	const menu = document.querySelector('.menu');
+
+	// Adiciona um evento de clique ao botão do menu
+	menuToggle.addEventListener('click', function () {
+		// Alterna a classe 'active' no menu de navegação
+		menu.classList.toggle('active');
+	});
+
+	// Adiciona um evento de clique ao documento inteiro
+	document.addEventListener('click', function (event) {
+		// Verifica se o clique ocorreu fora do menu
+		if (!menu.contains(event.target) && !menuToggle.contains(event.target)) {
+			// Fecha o menu
+			menu.classList.remove('active');
+		}
+	});
+
     var maxTentativas = 3;
     var tentativas = 0;
 
