--- a/API-Web-Data-Viz/public/index.html
+++ b/API-Web-Data-Viz/public/index.html
@@ -3,26 +3,33 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../img/LogoSEMescrita.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./css/img/icone.png" type="image/x-icon">
     <title>TransControl | Home</title>
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="../css/img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
+      <a href="index.html"><img class="icone1" src="./css/img/LogoSEMescrita.png" alt="Logo da Empresa"></a>
       <div class="itemsHeader">
-        <h4><a href="index.html">Início</a></h4>
-        <h4><a href="index.html#sobre-nos">Sobre Nós</a></h4>
+		<h4><a href="#" id="linkServicos">Nossos Serviços</a></h4>
+		<h4><a href="#" id="linkSobreNos">Sobre Nós</a></h4>
         <h4><a href="calculadora.html">Simulador Financeiro</a></h4>
         <h4>||</h4>
-        <buttonn class="botao" onclick="opcaoHeader()"></buttonn>
+		<div class="menu-1">
+			<div> <img class="hamburguer" src="./css/img/hamburguer.png" alt=""></div>
+		</div>
+	
+		<nav class="menu">
+			<ul> <br> <br>
+				<li><a href="login.html">Login</a></li> <br>
+				<li><a href="TelaDeCadastro.html">Cadastro</a></li> <br>
+			</ul>
+		</nav>
       </div>
     </header>
     <div class="background">
       <div class="underheader">
         <div id="options" class="options">
-          <a href="login.html">Login</a>
-          <a href="TelaDeCadastro.html">Cadastro</a>
         </div>
       </div>
 
@@ -64,7 +71,7 @@
       <h1 class="titulo-sobreNos">Sobre Nós</h1>
       <div class="container">
         <div class="card">
-          <img src="../css/img/3.png" alt="Icone" class="card-imagem">
+          <img src="./css/img/3.png" alt="Icone" class="card-imagem">
           <h2>Nossa Missão</h2>
           <p>
             Nossa missão é oferecer soluções tecnológicas avançadas que permitam
@@ -73,7 +80,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="../css/img/2.png" alt="Icone" class="card-imagem">
+          <img src="./css/img/2.png" alt="Icone" class="card-imagem">
           <h2>Nossa Visão</h2>
           <p>
             Nossa visão é ser líder no mercado de soluções para transporte
@@ -82,7 +89,7 @@
           </p>
         </div>
         <div class="card nossos-valores">
-          <img src="../css/img/1.png" alt="Icone" class="card-imagem">
+          <img src="./css/img/1.png" alt="Icone" class="card-imagem">
           <h2>Nossos Valores</h2>
           <ul>
             <li>
@@ -122,12 +129,42 @@
   </body>
 </html>
 <script>
-  function opcaoHeader() {
-    var options = document.getElementById("options");
-    if (options.style.display === "block") {
-      options.style.display = "none";
-    } else {
-      options.style.display = "block";
-    }
+
+		// Seleciona o botão do menu
+		const menuToggle = document.querySelector('.menu-1');
+	// Seleciona o menu de navegação
+	const menu = document.querySelector('.menu');
+
+	// Adiciona um evento de clique ao botão do menu
+	menuToggle.addEventListener('click', function () {
+		// Alterna a classe 'active' no menu de navegação
+		menu.classList.toggle('active');
+	});
+
+	// Adiciona um evento de clique ao documento inteiro
+	document.addEventListener('click', function (event) {
+		// Verifica se o clique ocorreu fora do menu
+		if (!menu.contains(event.target) && !menuToggle.contains(event.target)) {
+			// Fecha o menu
+			menu.classList.remove('active');
+		}
+	});
+
+
+
+   // Função para rolar suavemente para uma seção
+   function scrollToSection(sectionId) {
+    const section = document.getElementById(sectionId);
+    section.scrollIntoView({ behavior: 'smooth' });
   }
+
+  // Função para navegar para a seção "Sobre Mim" ao clicar no link
+  document.getElementById('linkSobreNos').addEventListener('click', function () {
+    scrollToSection('sobre-nos');
+  });
+
+  // Função para navegar para a seção "Sobre a Dança" ao clicar no link
+  document.getElementById('linkServicos').addEventListener('click', function () {
+    scrollToSection('nossos-servicos');
+  });
 </script>
