--- a/API-Web-Data-Viz/public/index.html
+++ b/API-Web-Data-Viz/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./css/img/icone.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../css/img/LOGO.png" type="image/x-icon">
     <title>TransControl | Home</title>
   </head>
   <body>
@@ -43,6 +43,7 @@
       <h2>Nossos Serviços</h2>
       <div class="servicos-container">
         <div class="servico-card">
+          <img src="./css/img/4.png" alt="Icone" class="card-imagem">
           <h3>Análise de Rotas e Horários</h3>
           <p>
             Utilizamos análise de dados avançada para otimizar suas rotas e
@@ -50,6 +51,7 @@
           </p>
         </div>
         <div class="servico-card">
+          <img src="./css/img/5.png" alt="Icone" class="card-imagem">
           <h3>Gerenciamento de Frota</h3>
           <p>
             Fornecemos soluções para gerenciar sua frota de ônibus de forma
@@ -58,6 +60,7 @@
           </p>
         </div>
         <div class="servico-card">
+          <img src="./css/img/6.png" alt="Icone" class="card-imagem">
           <h3>Consultoria Financeira</h3>
           <p>
             Oferecemos consultoria especializada em finanças para ajudar a
