--- a/API-Web-Data-Viz/public/login.html
+++ b/API-Web-Data-Viz/public/login.html
@@ -8,6 +8,7 @@
   <script src="./js/sessao.js"></script>
   <link rel="stylesheet" href="./css/cadastro.css">
   <link rel="shortcut icon" href="../img/LogoSEMescrita.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../css/img/LOGO.png" type="image/x-icon">
 </head>
 
 <body>
