--- a/API-Web-Data-Viz/public/calculadora.html
+++ b/API-Web-Data-Viz/public/calculadora.html
@@ -7,6 +7,7 @@
     <title>Simulador Financeiro</title>
     <link rel="stylesheet" href="../css/calculadora.css">
     <link rel="icon" type="image/x-icon" href="img/icon.svg">
+    <link rel="shortcut icon" href="../css/img/LOGO.png" type="image/x-icon">
 </head>
 
 <body>
