--- a/API-Web-Data-Viz/public/dashboard/mainPage.html
+++ b/API-Web-Data-Viz/public/dashboard/mainPage.html
@@ -8,6 +8,7 @@
 	<!-- <script src="../js/sessao.js"></script> -->
 	<link rel="stylesheet" href="../css/dashboard.css">
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<link rel="shortcut icon" href="../css/img/LOGO.png" type="image/x-icon">
 </head>
 
 <body onload="validarSessao(); atualizarGraficoPizza();">
@@ -68,12 +69,16 @@
 						<h4><a href="../pages/index.html">INICIO</a></h4>
 						<h4><a href="../pages/index.html#sobre-nos">SOBRE NÓS</a></h4>
 						<h4>||</h4>
-						<button class="botao" onclick="opcaoHeader()"></button>
-						<div id="options" style="left: 94%;" class="options">
-							<a href="#">Perfil</a>
-							<a href="#">Configurações</a>
-							<a href="#">Sair</a>
+
+						<div class="botao">
 						</div>
+						<nav class="menu">
+							<ul> <br> <br>
+								<li><a href="#">Perfil</a></li> <br>
+								<li><a href="#">Configurações</a></a></li> <br>
+								<li><a href="../login.html">Sair</a></a></li> <br>
+							</ul>
+						</nav>
 					</div>
 				</header>
 			</div>
@@ -113,7 +118,7 @@
 				<div class="alertas">
 					<div class="emergencia" onclick="window.location.href='emergencia.html'">
 						<div class="divAlertText">Emergência: 2</div>
-					</div>
+					</div> 
 					<!-- Alerta vermelho -->
 					<div class="atencao">
 						<div class="divAlertText">Atenção: 2</div>
@@ -124,6 +129,25 @@
 	</div>
 
 	<script>
+	// Seleciona o botão do menu
+	const menuToggle = document.querySelector('.botao');
+	// Seleciona o menu de navegação
+	const menu = document.querySelector('.menu');
+
+	// Adiciona um evento de clique ao botão do menu
+	menuToggle.addEventListener('click', function () {
+	// Alterna a classe 'active' no menu de navegação
+	menu.classList.toggle('active');
+	});
+
+	// Adiciona um evento de clique ao documento inteiro
+	document.addEventListener('click', function (event) {
+		// Verifica se o clique ocorreu fora do menu
+	if (!menu.contains(event.target) && !menuToggle.contains(event.target)) {
+			// Fecha o menu
+		menu.classList.remove('active');
+		}
+	});
 		//Função para o botão do usuário
 		function opcaoHeader() {
 			var options = document.getElementById("options");
