--- a/API-Web-Data-Viz/public/dashboard/linha300.html
+++ b/API-Web-Data-Viz/public/dashboard/linha300.html
@@ -65,8 +65,8 @@
 		<div class="content">
 			<div class="header">
 				<header>
-					<h4><a href="../pages/index.html">INICIO</a></h4>
-					<h4><a href="../pages/index.html#sobre-nos">SOBRE NÓS</a></h4>
+					<h4><a href="../index.html">INICIO</a></h4>
+					<h4><a href="../index.html#sobre-nos">SOBRE NÓS</a></h4>
 					<h4>||</h4>
 
 					<div class="botao">
