--- a/API-Web-Data-Viz/public/dashboard/longoPrazo.html
+++ b/API-Web-Data-Viz/public/dashboard/longoPrazo.html
@@ -70,8 +70,8 @@
 				<header>
 
 					<div class="itemsHeader">
-						<h4><a href="../pages/index.html">INICIO</a></h4>
-						<h4><a href="../pages/index.html#sobre-nos">SOBRE NÓS</a></h4>
+						<h4><a href="../index.html">INICIO</a></h4>
+						<h4><a href="../index.html#sobre-nos">SOBRE NÓS</a></h4>
 						<h4>||</h4>
 
 						<div class="botao">
