--- a/API-Web-Data-Viz/public/dashboard/mainPage.html
+++ b/API-Web-Data-Viz/public/dashboard/mainPage.html
@@ -87,7 +87,7 @@
 							<h2 style="color: chartreuse; font-size: 40px;">270.7</h2>
 						</div>
 					</div>
-					<div id="dados" style="margin-top: 6vh;">
+					<div id="dados" style="margin-top: 8vh;">
 						<select name="linhas" id="listaLinhas">
 							<option selected>Selecione uma linha</option>
 						</select>
@@ -184,8 +184,10 @@
 
 					if (data.length > 0) {
 						const total = data.reduce((acc, curr) => acc + curr.Total_Pessoas, 0);
+						var meta = 0;
 						// Definição das cores de acordo com o total
 						if (periodo === 'hoje') {
+							meta = 1200;
 							if (total < 700) {
 								backgroundColor = 'rgba(255, 0, 0, 0.2)';
 								borderColor = 'rgba(255, 0, 0, 1)';
@@ -197,6 +199,7 @@
 								borderColor = 'rgba(50, 205, 50, 1)';
 							}
 						} else if (periodo === 'dia_semana') {
+							meta = 2000;
 							if (total < 1500) {
 								backgroundColor = 'rgba(255, 0, 0, 0.2)';
 								borderColor = 'rgba(255, 0, 0, 1)';
@@ -208,6 +211,7 @@
 								borderColor = 'rgba(50, 205, 50, 1)';
 							}
 						} else if (periodo === 'semana_mes') {
+							meta = 3000;
 							if (total < 2500) {
 								backgroundColor = 'rgba(255, 0, 0, 0.2)';
 								borderColor = 'rgba(255, 0, 0, 1)';
@@ -219,6 +223,7 @@
 								borderColor = 'rgba(50, 205, 50, 1)';
 							}
 						} else if (periodo === 'mes_ano') {
+							meta = 20000;
 							if (total < 15000) {
 								backgroundColor = 'rgba(255, 0, 0, 0.2)';
 								borderColor = 'rgba(255, 0, 0, 1)';
@@ -235,9 +240,6 @@
 						const comparacaoMain = document.getElementById('comparacaoMain');
 						comparacaoMain.style.backgroundColor = backgroundColor;
 						comparacaoMain.style.border = `2px solid ${borderColor}`;
-
-						// Criar uma linha reta representando a meta conforme os valores verdes
-						const meta = 1500; // Você pode ajustar o valor da meta conforme necessário
 
 						const metaLine = {
 							label: 'Meta',
@@ -321,7 +323,7 @@
 			}
 		}
 
-		document.getElementById('listaLinhas').addEventListener('change', carregarGrafico);
+		
 		document.getElementById('listaPeriodos').addEventListener('change', carregarGrafico);
 	</script>
 </body>
